--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+
     <style name="Base.Theme.Ceria" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/ceria_pink</item>
+        <item name="colorAccent">@color/ceria_pink</item>
+        <item name="android:windowBackground">@color/dark_bg</item>
+<!--        <item name="android:textColorPrimary">@color/white</item>-->
+<!--        <item name="android:textColor">@color/white</item>-->
     </style>
 
     <style name="Theme.Ceria" parent="Base.Theme.Ceria" />
