--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,4 +3,129 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfileFragment"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.profile.ProfileFragment">
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imagepresong"
+                android:layout_width="30dp"
+                android:layout_gravity="center"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                app:shapeAppearanceOverlay="@style/cornershape"
+                android:src="@drawable/arrow_back"
+                tools:ignore="MissingConstraints" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginBottom="0dp"
+                android:textSize="21sp"
+                android:layout_weight="1"
+                android:textColor="@color/ceria_pink"
+                android:text="@string/profile" />
+            <ImageView
+                android:id="@+id/setting"
+                android:layout_width="30dp"
+                android:layout_gravity="center"
+                android:layout_height="30dp"
+                android:padding="5dp"
+                app:shapeAppearanceOverlay="@style/cornershape"
+                android:src="@drawable/settings"
+                tools:ignore="MissingConstraints" />
+        </LinearLayout>
+        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/CardViewLiked"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            card_view:cardBackgroundColor="@color/blue_dark"
+            card_view:strokeColor="@color/ceria_pink"
+            card_view:strokeWidth="2dp"
+            android:layout_marginBottom="6dp"
+            card_view:cardCornerRadius="6dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="0dp"
+                android:layout_marginLeft="10dp">
+
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textStart"
+                        android:layout_marginBottom="0dp"
+                        android:textSize="21sp"
+                        android:textColor="@color/white"
+                        android:text="@string/textprofile"
+                        tools:ignore="MissingConstraints" />
+
+                    <TextView
+                        android:id="@+id/totallikedsongs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textStart"
+                        android:layout_marginBottom="0dp"
+                        android:textSize="21sp"
+                        android:textColor="@color/white"
+                        android:text="@string/totallikedsongs"
+                        tools:ignore="MissingConstraints" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/toogle_favorite"
+                    android:layout_width="24dp"
+                    android:layout_height="22dp"
+                    android:layout_margin="20dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/favorite"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:padding="40dp"
+                    android:paddingLeft="150dp"
+                    android:textColor="@color/white"
+                    android:textOff=""
+                    android:textOn=""
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintHorizontal_bias="0.936"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:layout_constraintVertical_bias="0.232" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
