--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_bg">#05051E</color>
     <color name="ceria_pink">#DE1760</color>
+    <color name="gray">#BFBFBF</color>
+    <color name="blue_dark">#1E1E34</color>
 </resources>
