--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/ceria_pink">
-
-            </solid>
-            <size android:height="18dp" android:width="18dp"></size>
+            <solid android:color="@color/ceria_pink" />
+            <size android:width="18dp" android:height="18dp" />
+            <stroke android:width="1dp" android:color="@color/blue_dark" />
         </shape>
     </item>
 </selector>
