--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:includeFontPadding="true"
         android:paddingVertical="16dp"
         android:text="@string/login_with_spotify"
@@ -21,7 +21,7 @@
         app:iconGravity="end"
         app:iconPadding="0dp"
         app:iconSize="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/layout_spotify_not_found"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -53,7 +53,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -68,7 +67,7 @@
         android:id="@+id/tv_get_started"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/poppins_bold"
         android:includeFontPadding="false"
         android:text="@string/get_started"
@@ -115,7 +114,7 @@
         app:layout_constraintVertical_bias="0.6" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/layout_spotify_not_found"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
