--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,47 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+<!--    <style name="Base.Theme.Ceria" parent="Theme.Material3.DayNight.NoActionBar">-->
+    <!--        <item name="colorPrimary">@color/ceria_pink</item>-->
+    <!--        <item name="colorAccent">@color/ceria_pink</item>-->
+    <!--        <item name="android:windowBackground">@color/dark_bg</item>-->
+    <!--        <item name="android:textColorPrimary">@color/white</item>-->
+    <!--    </style>-->
     <style name="Base.Theme.Ceria" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/ceria_pink</item>
         <item name="colorAccent">@color/ceria_pink</item>
         <item name="android:windowBackground">@color/dark_bg</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorSecondary">@color/secondary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+    </style>
+
+    <style name="MySearchViewTheme" parent="Widget.AppCompat.SearchView">
+        <item name="android:background">@color/gray</item>
+        <item name="android:colorForeground">@color/white</item>
+    </style>
+
+    <style name="cornershape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+        <item name="color">@color/white</item>
+    </style>
+
+    <style name="profilshape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">100%</item>
+    </style>
+
+    <style name="SwitchTheme" parent="Widget.Material3.CompoundButton.MaterialSwitch">
+        <item name="colorControlActivated">@color/ceria_pink</item>
+        <item name="android:height">2dp</item>
+    </style>
+
+    <style name="Theme.Ceria" parent="Base.Theme.Ceria" />
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/dark_bg</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
+        <item name="windowSplashScreenAnimationDuration">200</item>
+        <item name="postSplashScreenTheme">@style/Theme.Ceria</item>
     </style>
 </resources>
