--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:colorSecondary">@color/secondary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="MySearchViewTheme" parent="Widget.AppCompat.SearchView">
