--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins_bold"
+        android:gravity="center|center_vertical"
+        android:includeFontPadding="false"
         android:text="@string/profile"
         android:textColor="?android:colorPrimary"
         android:textSize="24sp"
