--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -9,71 +9,56 @@
         android:id="@+id/loginFragment"
         android:name="com.ceria.capstone.ui.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.ceria.capstone.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
-    <action
-        android:id="@+id/action_global_homeFragment"
-        app:destination="@id/homeFragment"
-        app:launchSingleTop="true" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.ceria.capstone.ui.profile.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
-    <action
-        android:id="@+id/action_global_profileFragment"
-        app:destination="@id/profileFragment"
-        app:launchSingleTop="true" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profileFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_likedFragment"
+            app:destination="@id/likedFragment" />
+    </fragment>
     <fragment
         android:id="@+id/listeningFragment"
         android:name="com.ceria.capstone.ui.listening.ListeningFragment"
         android:label="fragment_listening"
-        tools:layout="@layout/fragment_listening" />
-    <action
-        android:id="@+id/action_global_listeningFragment"
-        app:destination="@id/listeningFragment"
-        app:launchSingleTop="true" />
+        tools:layout="@layout/fragment_listening" >
+        <action
+            android:id="@+id/action_listeningFragment_to_summaryFragment"
+            app:destination="@id/summaryFragment" />
+    </fragment>
     <fragment
         android:id="@+id/summaryFragment"
         android:name="com.ceria.capstone.ui.summary.SummaryFragment"
         android:label="fragment_summary"
         tools:layout="@layout/fragment_summary" />
-    <action
-        android:id="@+id/action_global_summaryFragment"
-        app:destination="@id/summaryFragment"
-        app:launchSingleTop="true" />
     <fragment
         android:id="@+id/likedFragment"
         android:name="com.ceria.capstone.ui.liked.LikedFragment"
         android:label="fragment_liked"
         tools:layout="@layout/fragment_liked" />
-    <action
-        android:id="@+id/action_global_likedFragment"
-        app:destination="@id/likedFragment"
-        app:launchSingleTop="true" />
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.ceria.capstone.ui.setting.SettingFragment"
         android:label="fragment_setting"
-        tools:layout="@layout/fragment_liked" >
+        tools:layout="@layout/fragment_setting">
         <action
             android:id="@+id/action_settingFragment_to_loginFragment"
             app:destination="@id/loginFragment"
-            app:popUpTo="@id/settingFragment"
+            app:popUpTo="@id/navigation_main"
             app:popUpToInclusive="true" />
     </fragment>
-    <action
-        android:id="@+id/action_global_settingFragment"
-        app:destination="@id/settingFragment"
-        app:launchSingleTop="true" />
 </navigation>
