--- a/app/src/main/res/menu/menu_bottom_navbar.xml
+++ b/app/src/main/res/menu/menu_bottom_navbar.xml
@@ -5,7 +5,7 @@
         android:icon="@drawable/home_icon"
         android:title="Home" />
     <item
-        android:id="@+id/listeningFragment"
+        android:id="@+id/session"
         android:title="Play" />
     <item
         android:id="@+id/profileFragment"
