--- a/app/src/main/res/layout/recycleview.xml
+++ b/app/src/main/res/layout/recycleview.xml
@@ -67,23 +67,19 @@
             android:id="@+id/toggle_favorite"
             android:layout_width="24dp"
             android:layout_height="22dp"
-            android:layout_margin="20dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="0dp"
             android:background="@drawable/favorite_icon"
             android:backgroundTint="@color/toggle_button_tint"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:padding="40dp"
-            android:paddingLeft="150dp"
-            android:textColor="@color/white"
             android:textOff=""
             android:textOn=""
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.936"
-            card_view:layout_constraintStart_toEndOf="@+id/tv_item_name"
             card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintVertical_bias="0.232" />
+            card_view:layout_constraintVertical_bias="0.5" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
