--- a/app/src/main/res/drawable/circle_outline_shape.xml
+++ b/app/src/main/res/drawable/circle_outline_shape.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/ceria_pink" />
+
+
     <size
         android:width="100dp"
-        android:height="100dp" />
+    android:height="100dp"/>
+
+    <stroke
+        android:width="4dp"
+    android:color="@color/white"/>
+
 </shape>
