Start session use case

--- a/app/src/main/res/navigation/session.xml
+++ b/app/src/main/res/navigation/session.xml
@@ -29,6 +29,9 @@
         <argument
             android:name="initialBpm"
             app:argType="integer" />
+        <argument
+            android:name="listenSessionId"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/summaryFragment"
