--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -104,4 +104,16 @@
         app:layout_constraintBottom_toBottomOf="@+id/monitorCircle"
         app:layout_constraintStart_toEndOf="@+id/monitorCircle"
         app:layout_constraintTop_toTopOf="@+id/monitorCircle" />
+
+    <ProgressBar
+        android:id="@+id/loading_start_session"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_start" />
 </androidx.constraintlayout.widget.ConstraintLayout>
