--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
@@ -23,7 +24,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/inter_bold"
-            android:text="Session #410"
+            android:text=""
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,22 +44,13 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_n_songs" />
 
         <TextView
-            android:id="@+id/tv_session_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/inter"
-            android:text="Lasted 1 hour 20 minutes"
-            app:layout_constraintStart_toStartOf="@+id/tv_session_id"
-            app:layout_constraintTop_toBottomOf="@+id/tv_session_id" />
-
-        <TextView
             android:id="@+id/tv_n_songs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Played 20 songs"
-            app:layout_constraintStart_toStartOf="@+id/tv_session_duration"
-            app:layout_constraintTop_toBottomOf="@+id/tv_session_duration" />
+            android:layout_marginTop="8dp"
+            android:text="@string/played_n_songs"
+            app:layout_constraintStart_toStartOf="@+id/tv_session_id"
+            app:layout_constraintTop_toBottomOf="@+id/tv_session_id" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
