--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,7 +62,7 @@
                 android:layout_marginBottom="8dp"
                 android:elevation="8dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="Listen Now"
+                android:text="@string/listennow"
                 app:icon="@drawable/pauseplay"
                 app:iconPadding="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
