Loading State (Profile dan Liked), Font

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/poppins_bold"
         android:ellipsize="end"
         android:text=""
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +64,7 @@
                 android:elevation="8dp"
                 android:fontFamily="@font/inter_bold"
                 android:text="@string/listennow"
+                android:textSize="14sp"
                 app:icon="@drawable/pauseplay"
                 app:iconPadding="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins_bold"
+        android:textSize="16sp"
         android:text="@string/listening_session"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/cardView"
