--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
                 android:text="@string/textsetting"
                 android:textAlignment="center"
                 android:textColor="@color/ceria_pink"
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="60dp"
+            android:fontFamily="@font/inter_bold"
             android:drawableEnd="@drawable/arrow_forward_ios"
             android:text="@string/logout"
             android:textColor="@color/white"
@@ -51,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
+            android:fontFamily="@font/inter_bold"
             android:layout_marginTop="40dp"
             android:drawableEnd="@drawable/arrow_forward_ios"
             android:text="@string/language"
