--- a/app/src/main/res/layout/fragment_listening.xml
+++ b/app/src/main/res/layout/fragment_listening.xml
@@ -25,8 +25,9 @@
             android:layout_marginEnd="32dp"
             android:layout_weight="1"
             android:backgroundTint="@color/ceria_pink"
-            android:fontFamily="@font/inter_bold"
+            android:fontFamily="@font/inter_light"
             android:text="@string/stopsessiontext"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
