--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -11,6 +11,7 @@
     <TextView
         android:id="@+id/textstopsession1"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/inter_bold"
         android:layout_height="wrap_content"
         android:text="@string/textstopsession1"
         android:textAlignment="textStart"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/textstopsession2"
         android:textAlignment="textStart"
+        android:fontFamily="@font/inter"
         android:textColor="@color/white"
         android:textSize="21sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,10 +98,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textAlignment="center"
-
+                    android:fontFamily="@font/poppins"
                     android:text="@string/avgheartrate3"
                     android:textColor="#FFFFFF"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                      />
                 </LinearLayout>
             </FrameLayout>
@@ -130,10 +132,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textAlignment="center"
-
+                        android:fontFamily="@font/poppins"
                         android:text="@string/duration3"
                         android:textColor="#FFFFFF"
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         />
                 </LinearLayout>
 
@@ -144,35 +146,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal">
         <TextView
 
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_marginBottom="0dp"
+            android:fontFamily="@font/inter_bold"
             android:text="@string/songsplayed"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="12sp" />
 
         <TextView
-
-            android:layout_width="wrap_content"
+            android:fontFamily="@font/inter_bold"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginBottom="0dp"
             android:text="@string/avgheartrate"
-            android:layout_marginLeft="10dp"
-            android:textAlignment="textStart"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="12sp" />
         <TextView
-
-            android:layout_width="wrap_content"
+            android:fontFamily="@font/inter_bold"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="@string/duration"
             android:textAlignment="center"
             android:textColor="@color/white"
@@ -190,6 +193,7 @@
         android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="21sp"
+        android:fontFamily="@font/inter_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
@@ -214,6 +218,7 @@
         android:layout_gravity="bottom"
         android:background="@color/dark_bg"
         android:gravity="center"
+        android:fontFamily="@font/inter_bold"
         android:paddingHorizontal="32dp"
         android:paddingVertical="10dp"
         android:text="@string/overlaytext"
