--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -26,6 +26,7 @@
             android:fontFamily="@font/inter_bold"
             android:text=""
             android:textStyle="bold"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,6 +38,7 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/inter_bold"
             android:text="@string/view_details"
+            android:textSize="12sp"
             android:textColor="?android:colorPrimary"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,6 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/played_n_songs"
+            android:fontFamily="@font/inter"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_session_id"
             app:layout_constraintTop_toBottomOf="@+id/tv_session_id" />
 
