--- a/app/src/main/res/layout/item_songs.xml
+++ b/app/src/main/res/layout/item_songs.xml
@@ -35,6 +35,7 @@
             android:id="@+id/tv_item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_bold"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="10dp"
@@ -55,6 +56,7 @@
             android:layout_marginStart="18dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/inter"
             android:textColor="@color/white"
             android:ellipsize="end"
             android:maxLines="1"
